<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="payment_by_cash">Наличные</string>
    <string name="payment_by_card">Оплата Картой</string>
    <string name="tw_to_be_paid">Итого к оплате:</string>
    <string name="btn_continue">Далее</string>
    <string name="no_back_money">Без сдачи</string>
    <string name="et_received">Принято у клиента, сом:</string>

    <string name="fiscal_mode_title">Фискальный режим</string>
    <string name="non_fiscal_mode_title">Не фискальный режим</string>
    <string name="fiscal_mode_dialog_content">Это основной режим осуществления торговой деятельности. Все данные отправляются в ОФД.</string>
    <string name="non_fiscal_mode_dialog_content">Нужен для обучения сотрудников, данные не передаются в ОФД.</string>
    <string name="sale">Продажа</string>
    <string name="amount_to_pay">Сумма к оплате, сом:</string>
    <string name="added_products">Добавленые товары:</string>
    <string name="add_product">Добавить товар</string>
    <string name="product_selection">Выбор товара</string>
    <string name="price_entry">Ввод цены</string>
    <string name="quantity_pcs">Количество, шт.</string>
    <string name="discount">Скидка %</string>
    <string name="allowance">Надбавка %</string>
    <string name="in_check">В чек</string>
    <string name="price_som">Цена, сом:</string>
    <string name="non_fiscal_mode_message">Нефискальный режим.</string>
    <string name="alert_icon_description">Alert icon</string>
    <string name="count">Количество</string>
    <string name="product_not_from_list">Товар не из списка</string>
    <string name="position_with_n">Позиция № %d</string>
    <string name="position">Позиция</string>
    <string name="payment_method">Метод оплаты</string>
    <string name="cash_check_number">Кассовый чек №%d</string>
    <string name="menu">Меню</string>
    <string name="print_check">Печать чека</string>
    <string name="without_change">Без сдачи</string>
    <string name="pay_cash">Оплатить Наличными</string>
    <string name="print_cashier_check">Печать кассового чека</string>
    <string name="change">Сдача:</string>
    <string name="new_sale">Новая Продажа</string>
    <string name="fail_to_print">НЕ УДАЛОСЬ РАСПЕЧАТАТЬ ЧЕК?</string>
    <string name="prepay">Предоплата</string>
    <string name="choose_products">Выберите товары для возврата:</string>
    <string name="cashiers_check">КАССОВЫЙ ЧЕК</string>
    <string name="payment_amount">%1$s с</string>
    <string name="receipt_number">ПРОДАЖА №%1$s</string>
    <string name="receipt_info">\n\n\n\n\nФПЧЕК%1$s\n\n\n</string>
    <string name="logout_fail_massage">Не удалось выполнить выход</string>
    <string name="dialog_error">Некорректные данные в запросе</string>
    <string name="tv_help">Для проверки чека зайдите на сайт ГНС\n www.kkm.gov.kg</string>
    <string name="amount_in_soms">%1$s c̲</string>
    <string name="receipt_in">Внесение</string>
    <string name="receipt_out">Выплата</string>
    <string name="receipt_in_out">Внесение и Выплаты из кассы</string>
    <string name="receipt_in_out_history">История внесений и выплат из кассы</string>
    <string name="sum_som">Сумма, сом</string>
    <string name="confirm">Подтвердить</string>

</resources>