<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:padding="@dimen/margin_16dp">
    <Button
        android:id="@+id/btn_receipt_in"
        android:text="@string/receipt_in"
        style="@style/GreenButtonStyle"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_32dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_receipt_out"/>

    <Button
        android:id="@+id/btn_receipt_out"
        android:text="@string/receipt_out"
        style="@style/WhiteButtonStyle"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_32dp"
        android:layout_marginStart="@dimen/margin_8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_receipt_in"
        app:layout_constraintEnd_toEndOf="parent"/>

    <kg.nurtelecom.ofd.cell.InfoCardCellView
        android:id="@+id/ic_input_sum"
        app:title_text="@string/sum_som"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        app:layout_constraintTop_toBottomOf="@id/btn_receipt_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:padding="@dimen/margin_16dp"
        style="@style/GreenButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>