<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:padding="@dimen/margin_16dp"
    tools:context=".ui.fragment.print_receipt.SaveReceiptFragment">

    <TextView
        android:id="@+id/tv_taxSalesPointName"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="Наименование"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_cashiers_check"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:text="@string/cashiers_check"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_taxSalesPointName" />

    <TextView
        android:id="@+id/tv_receipt_number"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:text="@string/receipt_number"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_cashiers_check" />

    <TextView
        android:id="@+id/tv_receipt_items"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="ReceiptItems"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_receipt_number" />

    <TextView
        android:id="@+id/tv_total_prices"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="TotalPrices"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_receipt_items" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_print_check"
        style="@style/BtnGreen"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:text="@string/print_check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>